--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     font-family: sans-serif;
 }
 #headertext{
-    position:absolute
+    position:absolute;
     top: 50px;
     left: 1000px;
 }
