--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@ body{
     text-align: center;
     font-family: sans-serif;
 }
-#headertext{
-    position:absolute;
-    top: 50px;
-    left: 1000px;
+.menu{
+    margin:auto;
+    text-align:center;
 }
