--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     font-family: sans-serif;
     text-align:center;
 }
-.menu{
+#menu{ 
 
     text-align:center;
     text-decoration: none;
